# Line_based_BA

./: CMakeLists.txt  README.md
examples/: g2o_main.cpp  g2o_main.cpp~
g2o/core/: block_solver.h
g2o/types/: .line3d.h.swp  .se3quat.h.swp  CMakeLists.txt  g2o_types_slam3d_addons_api.h  line3d.h  se3quat.h  types_six_dof_exp_map_lines.cpp  types_six_dof_exp_map_lines.h
include/: Converter.h  Optimizer.h
src/: Converter.cpp  Line_Optimizer.cpp  Line_Optimizer.cpp~  Optimizer.cpp
